log
Fri 12 May 2023 12:38:57 AM UTC: 
 heap.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 52 insertions(+), 5 deletions(-)
 tests:  5|2
total_score: 50/70
b100369
Fri 12 May 2023 12:40:56 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
2cf6248
Fri 12 May 2023 02:30:49 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
6f93bd5
Fri 12 May 2023 04:26:43 PM UTC: 
 heap.c | 63 ++++++++++++---------------------------------------------------
 1 file changed, 12 insertions(+), 51 deletions(-)
 tests:  0|4
total_score: 0/70
60d4052
Fri 12 May 2023 04:27:28 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|3
total_score: 10/70
b413091
Fri 12 May 2023 04:28:43 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
20a7782
Fri 12 May 2023 04:28:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   23 |   return pq->heapArray[1] ;
      |          ~~~~~~~~~~~~~^~~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
369fc28
Fri 12 May 2023 04:29:55 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e163a1d
Fri 12 May 2023 04:30:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d7763c7
Fri 12 May 2023 04:30:56 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
9d83d9f
Fri 12 May 2023 04:31:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
a0ae204
Fri 12 May 2023 04:33:42 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
edca8ff
Fri 12 May 2023 04:33:57 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2c73686
Fri 12 May 2023 04:34:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
bab8e47
Fri 12 May 2023 04:35:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4b28506
Fri 12 May 2023 04:36:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   22 |   heapElem *aux=&pq->heapArray[0];
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
b3f4984
Fri 12 May 2023 04:36:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f35c64b
Fri 12 May 2023 04:37:26 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
0d92712
Fri 12 May 2023 04:53:59 PM UTC: 
 heap.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
5eee49d
Fri 12 May 2023 04:57:43 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
551312d
Fri 12 May 2023 05:00:15 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
18aac0e
Fri 12 May 2023 05:02:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
e69c7d3
Fri 12 May 2023 05:04:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5bb754e
Fri 12 May 2023 05:04:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
40860b4
Fri 12 May 2023 05:07:26 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
f26758d
Fri 12 May 2023 05:07:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
389f4db
Fri 12 May 2023 05:09:53 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:53:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘heapElem’ {aka ‘struct nodo’} [-Werror=format=]
   53 |     printf("%d, ",pq->heapArray[i]);
      |             ~^    ~~~~~~~~~~~~~~~~
      |              |                 |
      |              int               heapElem {aka struct nodo}
cc1: all warnings being treated as errors
Compilation failed
6f43f09
Fri 12 May 2023 05:10:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
af0d1a9
Fri 12 May 2023 05:11:43 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
3550299
Fri 12 May 2023 05:12:13 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
e1160f4
Fri 12 May 2023 05:12:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
bd38473
Fri 12 May 2023 05:12:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
1ed4cff
